--- a/blog/book/templates/book/book.html
+++ b/blog/book/templates/book/book.html
@@ -11,13 +11,13 @@
 {% include 'main/menu.html' %}
 <h1>歡迎來到我的書庫</h1>
 <br>
-{% for items in itemArray %}
-      <h3>書名：{{ item.title }}</h3>
-      <p>作者:{{ items.author }}</p>
-      <p>出版商:{{ items.publisher }}</p>
-      <p>發表日期:{{ items.pubdate|date:'Y-m-d H:i' }}</p>
-      <p>第幾版:{{ items.version }}</p>
-      <p>價格:{{ items.price }}</p>
+{% for book in books %}
+      <h3>書名：{{ book.title }}</h3>
+      <p>作者:{{ book.author }}</p>
+      <p>出版商:{{ book.publisher }}</p>
+      <p>發表日期:{{ book.pubdate|date:'Y-m-d' }}</p>
+      <p>第幾版:{{ book.version }}</p>
+      <p>價格:{{ book.price }}</p>
   <hr>
 {% endfor %}
 <br>
