--- a/blog/main/static/main/css/main.css
+++ b/blog/main/static/main/css/main.css
@@ -10,10 +10,61 @@ body {
 
 /* Menu */
 ul#menu {
-margin-bottom: 30px;
-text-align: right;
+  margin-bottom: 30px;
+  text-align: right;
 }
+
 ul#menu li {
-display: inline-block;
-margin-right:20px;
+  display: inline-block;
+  margin-right:20px;
+}
+
+/* Button */
+.btn {
+  color: black;
+  font-size: 0.8em;
+  font-weight:bold;
+  padding: 5px 10px;
+  text-decoration: none;
+  border: thin solid gray;
+  background: linear-gradient(#f7f7f7,#dedede);
+}
+
+/* Messages */
+.success {
+  color: blue;
+}
+.error {
+  color: red;
+}
+
+/* Table */
+.table {
+  margin: 0 auto;
+  width: 100%;
+  border-collapse: collapse;
+}
+.table th {
+  font-weight: normal;
+  font-size: 1.1em;
+  padding: 10px 0 10px 10px;
+  text-align: left;
+  background: linear-gradient(#cccccc, #aaaaaa);
+  border-bottom: 1px solid black
+}
+.table td {
+  color: #222222;
+  background-color: #d0d0d0;
+  padding: 12px 0 12px 10px;
+}
+.table-striped tr:nth-child(even) td {
+  background-color: #eeeeee;
+}
+.table-hover tr:hover td {
+  background-color: #cccccc;
+}
+
+/* Misc */
+.inlineBlock {
+  display: inline-block;
 }
