--- a/blog/article/static/article/css/article.css
+++ b/blog/article/static/article/css/article.css
@@ -3,3 +3,12 @@
   background-color: rgba(255,255,255,0.5);
   border-radius: 10px;
 }
+
+.comment, .commentAuthor {
+f ont-size: 0.8em;
+}
+
+.commentAuthor {
+  font-weight: bold;
+  color: #365899;
+}
