--- a/blog/article/templates/article/articleRead.html
+++ b/blog/article/templates/article/articleRead.html
@@ -6,12 +6,15 @@
 {% block heading %}閱讀文章{% endblock %}
 {% block content %}
 <h3 class="inlineBlock">{{ article.title }}</h3>
-<a class="btn inlineBlock" href="{% url 'article:articleUpdate' article.id %}">修改</a>
+{% if user.is_superuser %}
+  <a class="btn inlineBlock" href="{% url 'article:articleUpdate' article.id %}">修改</a>
+{% endif %}
 <p>發表時間:{{ article.pubDateTime|date:'Y-m-d H:i' }}</p>
 <div class=articleContent>{{ article.content|linebreaks }}</div>
-<p>讚:{{ article.likes }}</p>
+<p>瀏覽次數:{{ article.views }},按讚:{{ article.likes }}</p>
 {% for comment in comments %}
   <p>
+    <span class=commentAuthor>{{ comment.user.profile.fullName }}</span>
     <span class=comment>{{ comment.content }}</span><br>
     <span class=commentTime>{{ comment.pubDateTime|date:'Y-m-d H:i'}}</span>
   </p>
