--- a/blog/article/templates/article/article.html
+++ b/blog/article/templates/article/article.html
@@ -3,7 +3,7 @@
 {% block css %}
 <link rel="stylesheet" href="{% static 'article/css/article.css' %}">
 {% endblock %}
-{% block heading %}歡迎蒞臨{% endblock %}
+{% block heading %}部落格{% endblock %}
 {% block content %}
 {% include 'article/searchForm.html' %}
 <br>
