--- a/blog/main/templates/main/about.html
+++ b/blog/main/templates/main/about.html
@@ -1,5 +1,26 @@
 {% extends 'main/base.html' %}
 {% block heading %}關於{% endblock %}
 {% block content %}
-<p>歡迎來到我的部落格,您可盡情瀏覽並留言。</p>
+<h1>Whoo-hoo的由來 </h1>
+<p>當我們發現驚奇的事物時總會忍不住發出一聲贊嘆聲，</p>
+<p>而這讚嘆聲就是Whoo-hoo 。</p>
+<p>每當我們在市集中四處尋找時，</p>
+<p>都希望找到的每樣商品都能讓每個女孩們感到新奇。</p>
+<p>因為每個人都有不一樣的性格</p>
+<p>有的人溫柔婉約、有個人是活潑率真</p>
+<p>但一樣的是，每個女孩都是對新事物感到新奇的！</p>
+
+<h1>Whoo-hoo的理念 </h1>
+<p>我們的理念是讓平價和新奇可以並肩而行</p>
+<p>堅持用比市面上還要低價的經營理念</p>
+<p>把優質的商品分享給每個喜歡新鮮事物的妳們</p>
+<p>目前市面上新奇的商品，都屬中高價位</p>
+<p>因為看到了女孩們想要購買卻礙於價錢問題而怯步</p>
+<p>我們決定勇敢站出來！</p>
+<p>為女孩們開闢另一個平價商品的平台</p>
+
+<h1>提供完善的售後服務 </h1>
+<p>Whoo-hoo 提供完善的售後服務，以保障買家權益。</p>
+<p>所有售後服務都需在收到商品的10日內完成(僅限台灣地區)</p>
+<p>※務必請買家收到商品後檢查喔!</p>
 {% endblock %}
