--- a/blog/main/templates/main/menu.html
+++ b/blog/main/templates/main/menu.html
@@ -8,5 +8,5 @@
     <li><a href="{% url 'account:register' %}">註冊</a></li>
     <li><a href="{% url 'account:login' %}">登入</a></li>
   {% endif %}
-  <li><a href="{% url 'book:book' %}">書庫</a></li>
+  <li><a href="{% url 'book:book' %}">商品</a></li>
 </ul>
