--- a/blog/main/static/main/css/main.css
+++ b/blog/main/static/main/css/main.css
@@ -4,7 +4,7 @@ html, body {
 }
 body {
   padding: 20px;
-  background: url(../img/background.jpg) no-repeat center center fixed;
+  background: url(../img/background1.jpg) no-repeat center center fixed;
   background-size: cover;
 }
 
