--- a/blog/main/templates/main/base.html
+++ b/blog/main/templates/main/base.html
@@ -2,14 +2,14 @@
 {% load staticfiles %}
 <html>
 <head>
-<title>部落格</title>
+<title>Whoo-hoo</title>
 <meta charset="utf-8">
 <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
 {% block css %}{% endblock %}
 </head>
 <body>
 {% include 'main/menu.html' %}
-<h2>部落格 -- {% block heading %}{% endblock %}</h2>
+<h2>Whoo-hoo屋虎 -- {% block heading %}{% endblock %}</h2>
 {% include 'main/messages.html' %}
 {% block content %}{% endblock %}
 </body>
